--- a/assets/HTML/index.html
+++ b/assets/HTML/index.html
@@ -215,7 +215,7 @@
 
                 <a
                   target="_blank"
-                  href="https://mdbootstrap.com/education/bootstrap/"
+                  href="#"
                   class="btn btn-outline-white btn-lg"
                   >Start free tutorial
                   <i class="fas fa-graduation-cap ml-2"></i>
@@ -262,7 +262,7 @@
 
                 <a
                   target="_blank"
-                  href="https://mdbootstrap.com/education/bootstrap/"
+                  href="#"
                   class="btn btn-outline-white btn-lg"
                   >Start free tutorial
                   <i class="fas fa-graduation-cap ml-2"></i>
@@ -822,7 +822,7 @@
           <i class="fab fa-github mr-3"></i>
         </a>
 
-        <a href="http://codepen.io/mdbootstrap/" target="_blank">
+        <a href="#" target="_blank">
           <i class="fab fa-codepen mr-3"></i>
         </a>
       </div>
@@ -830,7 +830,7 @@
 
       <!--Copyright-->
       <div class="footer-copyright py-3">
-        © 2020 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
+        © 2021 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
       </div>
       <!--/.Copyright-->
     </footer>
