--- a/assets/HTML/meeting.html
+++ b/assets/HTML/meeting.html
@@ -307,7 +307,7 @@
           <i class="fab fa-github mr-3"></i>
         </a>
 
-        <a href="http://codepen.io/mdbootstrap/" target="_blank">
+        <a href="#" target="_blank">
           <i class="fab fa-codepen mr-3"></i>
         </a>
       </div>
@@ -315,7 +315,7 @@
 
       <!--Copyright-->
       <div class="footer-copyright py-3">
-        © 2020 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
+        © 2021 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
       </div>
       <!--/.Copyright-->
     </footer>
