--- a/assets/HTML/padaadhikari.html
+++ b/assets/HTML/padaadhikari.html
@@ -428,14 +428,14 @@
           <i class="fab fa-github mr-3"></i>
         </a>
 
-        <a href="http://codepen.io/mdbootstrap/" target="_blank">
+        <a href="#" target="_blank">
           <i class="fab fa-codepen mr-3"></i>
         </a>
       </div>
       <!-- Social icons -->
       <!--Copyright-->
       <div class="footer-copyright py-3">
-        © 2020 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
+        © 2021 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
       </div>
       <!--/.Copyright-->
     </footer>
