--- a/assets/HTML/register.html
+++ b/assets/HTML/register.html
@@ -93,7 +93,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://mdbootstrap.com/education/bootstrap/"
+                href="#"
                 target="_blank"
                 >पदाधिकारी</a
               >
@@ -419,7 +419,7 @@
           <i class="fab fa-github mr-3"></i>
         </a>
 
-        <a href="http://codepen.io/mdbootstrap/" target="_blank">
+        <a href="#" target="_blank">
           <i class="fab fa-codepen mr-3"></i>
         </a>
       </div>
@@ -427,7 +427,7 @@
 
       <!--Copyright-->
       <div class="footer-copyright py-3">
-        © 2020 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
+        © 2021 Copyright: Seervi Gyankosh Shiksha Seva Sanstha
       </div>
       <!--/.Copyright-->
     </footer>
